# monorepo-das-recuperacion

./: .env.example  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  .pylintrc  Dockerfile  README.md  pyproject.toml
backend/restApi/: db.sqlite3  pyrightconfig.json
backend/restApi/.zed/: debug.json
backend/restApi/ai/: llm_service.py
backend/restApi/healthcheck/: urls.py  views.py
backend/restApi/restApi/: settings.py  urls.py
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  package-lock.json
